Fixed the label and h1 styles for dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-    @apply dark:bg-slate-950 bg-white
+:root{
+    @apply dark:bg-slate-900 bg-white
 }
